# platform.external.vulkan-headers

./: Android.bp  BUILD.bazel  LICENSE  OWNERS
include/vulkan/: vulkan.cppm  vulkan.hpp  vulkan_core.h  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_funcs.hpp  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_raii.hpp  vulkan_static_assertions.hpp  vulkan_structs.hpp  vulkan_to_string.hpp
registry/: cgenerator.py  generator.py  validusage.json  vk.xml
